<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minWidth="1dp"
    tools:context="com.example.android.breastfeeding.TrackActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/track_amount_name"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/amountEditText"
        android:layout_width="101dp"
        android:layout_height="107dp"
        android:layout_marginTop="24dp"
        android:ems="3"
        android:inputType="number"
        android:text="@string/track_amount_param"
        android:textAlignment="center"
        android:textSize="50sp"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:text="@string/track_amount_param" />

    <SeekBar
        android:id="@+id/zmenaSeekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="44dp"
        android:max="30"
        android:paddingLeft="0dp"
        android:paddingRight="0dp"
        android:progressDrawable="@drawable/progress_drawable"
        android:splitTrack="false"
        android:thumb="@drawable/thumb_drawable"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/amountEditText" />

    <TextView
        android:id="@+id/ml_TV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="100dp"
        android:text="@string/track_ml"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/amountEditText"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <CheckBox
        android:id="@+id/zmenaCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:text="@string/track_na"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="47dp"
        android:layout_marginTop="36dp"
        android:text="@string/track_save"
        android:onClick="amountClick"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/zmenaSeekBar" />

</android.support.constraint.ConstraintLayout>
